# lab3-template

./: .gitignore  docker-compose-test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: classroom.yml
bonus/: Dockerfile  openapi.yml
bonus/app/: database.py  main.py  schemas.py
bonus/app/tests/: test_api.py  test_database.py
bonus/scripts/: init_db.sql
flight/: Dockerfile  Dockerfile.test  openapi.json  openapi.yaml  pyproject.toml
flight/app/: database.py  main.py  schemas.py
flight/app/tests/: test_database.py  test_main.py
flight/scripts/: init_db.sql
gateway/: Dockerfile  pyproject.toml
gateway/app/: clients.py  main.py  schemas.py
gateway/tests/: test_gateway.py
scripts/: wait-script.sh
ticket/: Dockerfile  openapi.yml  pyproject.toml
ticket/app/: database.py  main.py  schemas.py
ticket/app/tests/: test_database.py  test_main.py
ticket/scripts/: init_db.sql
v1/postman/: environment.json
