[project]
name = "lab2-template"
version = "0.1.0"
description = ""
authors = [
    {name = "manimadzis",email = "manimadzis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
